small fix for phase spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -839,5 +839,19 @@ body {
   
 }
 
+.text_no_overflow_ellipsis{
+  margin: 0;
+  padding: 0;
+  width: 100px;
+  height: fit-content;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
+}
+
+.no_sidescroll{
+  overflow-x: hidden;
+}
 
 /*# sourceMappingURL=main.css.map */
